--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "palette_picker_be",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll",
+    "start": "nodemon server.js",
+    "dev": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-jest": "^24.9.0",
     "express": "^4.17.1",
+    "jest": "^24.5.0",
     "knex": "^0.19.5",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "regenerator-runtime": "^0.13.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
+    "babel-jest": "^24.5.0",
+    "supertest": "^4.0.2"
   }
 }
