--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
 node_js:
   - "node"
+services:
+  - postgresql
+before_script:
+  - psql -c 'CREATE DATABASE palette_picker_test;' -U postgres
