--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test" : "jest --forceExit",
+    "test": "jest --forceExit",
     "test:watch": "jest --watchAll",
     "start": "node server.js",
     "dev": "nodemon --exec babel-node server.js"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-jest": "^24.9.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^24.5.0",
     "knex": "^0.19.5",
